# stationary-cam

./: Cargo.toml  README.md
example/: example.toml  inkscape_svg_to_dxf.sh
src/: main.rs
