[package]
name = "stationary-cam"
version = "0.2.3"
authors = ["Armin Schäfer"]
description = "This safe CLI generates a stationary cam as .svg."
repository = "https://github.com/772/stationary-cam"
license = "MIT OR Apache-2.0"
readme = "README.md"
edition = "2021"
categories = ["Graphics"]
keywords = ["cli"]

[dependencies]
toml = "0.7.5"
serde = { version = "1.0.164", features = ["derive"] }
