[package]
name = "stationary-cam"
version = "0.2.6"
authors = ["Armin Schäfer"]
description = "This safe CLI generates a stationary cam as .svg."
repository = "https://github.com/772/stationary-cam"
license = "MIT OR Apache-2.0"
readme = "README.md"
edition = "2024"
categories = ["graphics"]
keywords = ["cli"]

[dependencies]
clap = { version = "4.5.31", features = ["derive"] }
